gccida/c1/distribute_notes
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/distribute_notes/src/combine.c:12602:4: error: expected ';' after expression
rtx v62; // [rsp+0h] [rbp-78h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/distribute_notes/src/combine.c:12602:5: error: use of undeclared identifier 'v62'
rtx v62; // [rsp+0h] [rbp-78h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/distribute_notes/src/combine.c:12603:4: error: expected ';' after expression
rtx v63; // [rsp+0h] [rbp-78h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/distribute_notes/src/combine.c:12603:5: error: use of undeclared identifier 'v63'
rtx v63; // [rsp+0h] [rbp-78h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/distribute_notes/src/combine.c:12615:14: error: expected expression
fld = ( rtx *)v7->fld; 
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/distribute_notes/src/combine.c:12616:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v9.rtwint = ( __int64)v7->fld[0]; 
                      ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/distribute_notes/src/combine.c:12626:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v11 = (  struct rtx_def *)v7[1]; 
                          ^~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/distribute_notes/src/combine.c:12634:39: error: expected expression
v19 = reg_referenced_p( *fld, *( rtx *)&i3[2]); 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/distribute_notes/src/combine.c:12643:38: error: expected expression
if ( reg_referenced_p( *fld, *( rtx *)&v6[2]) ) 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/distribute_notes/src/combine.c:12659:1: error: use of undeclared identifier 'v62'
v62 = ( rtx)v34; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/distribute_notes/src/combine.c:12662:13: error: expected ';' after expression
v35 = ( rtx)v35[1]; 
            ^
            ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/distribute_notes/src/combine.c:12667:21: error: expected expression
if ( v35 == *( rtx *)v34 || v13 ) 
                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/distribute_notes/src/combine.c:12673:31: error: expected expression
if ( reg_set_p( *fld, *( rtx *)&v35[2]) ) 
                              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/distribute_notes/src/combine.c:12677:13: error: expected ';' after expression
v37 = ( rtx)v35[2]; 
            ^
            ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/distribute_notes/src/combine.c:12679:34: error: expected expression
v37 = single_set_2( v35, *( rtx *)&v35[2]); 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/distribute_notes/src/combine.c:12690:31: error: expected expression
if ( !side_effects_p( *( rtx *)&v37[1]) && rtx_equal_p( *fld, rtx) ) 
                              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/distribute_notes/src/combine.c:12694:27: error: expected expression
distribute_links( *( rtx *)&v35[3]); 
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/distribute_notes/src/combine.c:12704:38: error: expected expression
if ( reg_referenced_p( *fld, *( rtx *)&v35[2]) ) 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/distribute_notes/src/combine.c:12722:17: error: use of undeclared identifier 'v62'
v34 = ( __int64)v62; 
                ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/distribute_notes/src/obj/combine.o] Error 1
